!!! TASK: completely change the syntax
BREAKING:
- Escape ().
- Replace [] to ().
- Matches at word boundaries and ()

--- a/Resources/Private/Translations/en/NodeTypes/TermMixin.xlf
+++ b/Resources/Private/Translations/en/NodeTypes/TermMixin.xlf
@@ -9,8 +9,8 @@
 				<source>Spelling variants</source>
 			</trans-unit>
 			<trans-unit xml:lang="ru" id="properties.replaceVariants.ui.help.message" xml:space="preserve">
-				<source>Spelling variants, separated by comma, supporting regexp, "|" expands into "\w*?"</source>
-				<source>Варианты разделяются запятой, поддерживают regexp, "|" отделяет изменяемую часть. Примеры: "Дмитри+ (Сергеевич+)? Гасак+", "(священник+|о.|отец|отц+)? Георги+ Кочетков+"</source>
+				<source>Spelling variants, separated by comma, supporting regexp, "[]" turn into "()", "+" expands into "\w*?"</source>
+				<source>Варианты разделяются запятой, поддерживают regexp, "+" отделяет изменяемую часть, "[вариант1|вариант2]". Примеры: "Дмитри+ [Сергеевич+]? Гасак+", "[священник+|о.|отец|отц+]? Георги+ Кочетков+"</source>
 			</trans-unit>
 		</body>
 	</file>
