TASK: update help text

--- a/Resources/Private/Translations/ru/NodeTypes/TermMixin.xlf
+++ b/Resources/Private/Translations/ru/NodeTypes/TermMixin.xlf
@@ -12,7 +12,7 @@
 			</trans-unit>
 			<trans-unit id="properties.replaceVariants.ui.help.message" xml:space="preserve">
 				<source>Spelling variants, separated by comma, supporting regexp, "|" expands into "\w*?"</source>
-				<target>Варианты разделяются запятой, поддерживают regexp, "|" отделяет изменяемую часть. Примеры: "Дмитри+ (Сергеевич+)? Гасак+", "(священник+|о.|отец|отц+)? Георги+ Кочетков+"</target>
+				<target>Варианты разделяются запятой, поддерживают regexp, "|" отделяет изменяемую часть. Примеры: "Дмитри+ [Сергеевич+]? Гасак+", "[священник+|о.|отец|отц+]? Георги+ Кочетков+"</target>
 			</trans-unit>
 		</body>
 	</file>
